--- a/src/app.scss
+++ b/src/app.scss
@@ -32,6 +32,31 @@ body {
   color: var(--black);
 
   background-color: var(--white);
+
+  --font-3: .675em;
+  --font-2: .75em;
+  --font-1: .875em;
+  --font0: 1em;
+  --font1: 1.25em;
+  --font2: 1.5em;
+  --font3: 1.75em;
+  --font4: 2em;
+  --font5: 2.25em;
+}
+
+body[mobile] {
+  --mobile-width: 100%;
+  
+  --font-3: 11px;
+  --font-2: 14px;
+  --font-1: .875em;
+  --font0: 14px;
+  --font1: 16px;
+  --font2: 18px;
+  --font3: 20px;
+  --font4: 2em;
+
+  --big-photo: 50vw;
 }
 
 @media only screen and (max-width: 1279px) {
@@ -94,15 +119,9 @@ button {
   color: var(--white);
   text-transform: uppercase;
   cursor: pointer;
-  font-size: 1em;
+  font-size: var(--font0);
   transition: .25s ease;
   white-space: nowrap;
-}
-
-button:hover,
-button[data-tertiary]:hover {
-  background-color: var(--purple);
-  border-color: var(--purple);
 }
 
 button[data-secondary="true"] {
@@ -111,13 +130,17 @@ button[data-secondary="true"] {
   border-color: var(--gray);
 }
 
-button[data-secondary="true"] {
-  background-color: var(--white);
-}
-
 button[data-tertiary] {
   background-color: var(--yellow);
   border-color: var(--yellow);
+}
+
+button:hover,
+button[data-tertiary]:hover,
+button[data-secondary="true"]:hover {
+  background-color: var(--purple);
+  border-color: var(--purple);
+  color: var(--white);
 }
 
 .capt {
