Update dados and other improvements

--- a/src/app.scss
+++ b/src/app.scss
@@ -49,7 +49,7 @@ body[mobile] {
   
   --font-3: 11px;
   --font-2: 14px;
-  --font-1: .875em;
+  --font-1: 14px;
   --font0: 14px;
   --font1: 16px;
   --font2: 18px;
