Update search bar to use tabs and shuffle cards order

--- a/src/app.scss
+++ b/src/app.scss
@@ -16,7 +16,7 @@
   --gray: #1e1e1e61;
   --light-gray: #1e1e1e1f;
   --lighter-gray: #EBEBEB;
-  --red: #FF200C;
+  --red: #FF0000;
   --orange: #FF5436;
   --yellow: #FF912B;
   --purple: #4D00AF;
